Mobile: Improved stacked layout for the book reference in the features webpage.

--- a/features.html
+++ b/features.html
@@ -50,14 +50,14 @@
     <p>Other literature related to the improved model-free analysis used within relax, which can nevertheless be applied to other techniques, include model-free model selection (<a href="refs.html#dAuvergneGooley03">d'Auvergne and Gooley, 2003</a>; <a href="refs.html#Chen04">Chen et al., 2004</a>), model-free model elimination (<a href="refs.html#dAuvergneGooley06">d'Auvergne and Gooley, 2006</a>), the theory (<a href="refs.html#dAuvergneGooley07">d'Auvergne and Gooley, 2007</a>) behind the new model-free optimisation protocol (<a href="refs.html#dAuvergneGooley08b">d'Auvergne and Gooley, 2008b</a>), and the hybridisation of different models (<a href="refs.html#Horne07">Horne et al., 2007</a>; <a href="refs.html#dAuvergneGooley08b">d'Auvergne and Gooley, 2008b</a>).  Most of these details can be found in the PhD thesis of <a href="refs.html#dAuvergne06">d'Auvergne, 2006</a>.</p>
 
    <h3>Model-free and relax</h3>
-    <table cellpadding="5">
-      <tbody>
-       <tr>
-        <td class="link_logo_td"><a href="http://www.amazon.com/Protein-Dynamics-Model-free-Analysis-Relaxation/dp/3639057627"><img src="images/book_of_thesis_small.png" alt="Protein Dynamics - A Study of the Model-free Analysis of NMR Relaxation Data" class="image"/></a></td>
-        <td class="book_td">The reference <a href="refs.html#dAuvergne06">d'Auvergne, E. J. (2006).   Protein dynamics: a study of the model-free analysis of NMR relaxation data. Ph.D. thesis, Biochemistry and Molecular Biology, University of Melbourne</a> coving all of the model-free analysis aspects of relax is also published in paperback book form.  It is available from <a href="http://www.amazon.com/Protein-Dynamics-Model-free-Analysis-Relaxation/dp/3639057627">Amazon.com</a>, <a href="http://www.barnesandnoble.com/w/protein-dynamics-a-study-of-the-model-free-analysis-of-nmr-relaxation-data-edward-dauvergne/1014058697?ean=9783639057621&amp;itm=1&amp;usri=9783639057621">Barnes &amp; Nobel</a> and many other international and national online book stores.  This book is from the academic publisher <a href="https://www.akademikerverlag.de">AkademikerVerlag</a> (previously VDM-Verlag - note this site is only in German).</td>
-       </tr>
-      </tbody>
-     </table>
+    <div class="book_ref_grid">
+     <div class="book_ref_grid_img">
+      <a href="http://www.amazon.com/Protein-Dynamics-Model-free-Analysis-Relaxation/dp/3639057627"><img src="images/book_of_thesis_crop.png" alt="Protein Dynamics - A Study of the Model-free Analysis of NMR Relaxation Data" class="image"/></a>
+     </div>
+     <div class="book_ref_grid_text">
+      <p>The reference <a href="refs.html#dAuvergne06">d'Auvergne, E. J. (2006).   Protein dynamics: a study of the model-free analysis of NMR relaxation data. Ph.D. thesis, Biochemistry and Molecular Biology, University of Melbourne</a> coving all of the model-free analysis aspects of relax is also published in paperback book form.  It is available from <a href="http://www.amazon.com/Protein-Dynamics-Model-free-Analysis-Relaxation/dp/3639057627">Amazon.com</a>, <a href="http://www.barnesandnoble.com/w/protein-dynamics-a-study-of-the-model-free-analysis-of-nmr-relaxation-data-edward-dauvergne/1014058697?ean=9783639057621&amp;itm=1&amp;usri=9783639057621">Barnes &amp; Nobel</a> and many other international and national online book stores.  This book is from the academic publisher <a href="https://www.akademikerverlag.de">AkademikerVerlag</a> (previously VDM-Verlag - note this site is only in German).</p>
+     </div>
+    </div>
 
   <div class="main_h2" id="theories">
    <h2>Supported NMR theories</h2>
