Mobile: Reformatting of the links tables for small screens up to 800px.
The tables are collapsed into blocks.

--- a/links.html
+++ b/links.html
@@ -78,13 +78,16 @@
   <div id="relax_infrastructure" class="main_box">
       <h2>relax infrastructure</h2>
 
-<table cellpadding="5">
-  <tbody>
+<table class="links_table">
+  <thead>
     <tr>
       <td><strong>Site</strong></td>
       <td><strong>Description</strong></td>
       <td><strong>Links</strong></td>
     </tr>
+  </thead>
+
+  <tbody>
 
     <tr id="SourceForge" class="link_tr">
       <td class="link_logo_td"><a href="https://sourceforge.net/projects/nmr-relax"><img src="images/sf_logo.png" alt="SourceForege logo" class="image"/></a></td>
@@ -123,14 +126,16 @@
     <div id="Mailing_list_archives" class="main_h2">
       <h2>Mailing list archives</h2>
 
-<table cellpadding="5">
-  <tbody>
+<table class="links_table">
+  <thead>
     <tr>
       <td><strong>Site</strong></td>
       <td><strong>Description</strong></td>
       <td><strong>Links</strong></td>
     </tr>
+  </thead>
 
+  <tbody>
     <!--
     <tr id="Gmane" class="link_tr">
       <td class="link_logo_td"><a href="http://gmane.org/find.php?list=nmr.relax"><img src="images/gmane-50.png" alt="Gmane logo" class="image"/></a></td>
@@ -158,14 +163,16 @@
     <div id="Web_resources" class="main_h2">
       <h2>Web resources</h2>
 
-<table cellpadding="5">
-  <tbody>
+<table class="links_table">
+  <thead>
     <tr>
       <td><strong>Site</strong></td>
       <td><strong>Description</strong></td>
       <td><strong>Links</strong></td>
     </tr>
+  </thead>
 
+  <tbody>
     <tr id="Free_software_directory" class="link_tr">
       <td class="link_logo_td"><a href="http://directory.fsf.org/wiki/relax"><img src="images/heckert_gnu.small.png" alt="The Free Software Directory" class="image"/></a></td>
       <td>The Free Software Directory.</td>
@@ -204,7 +211,7 @@
   </tbody>
 </table>
 
-<table cellpadding="5">
+<table class="links_table">
   <tbody>
     <tr id="OpenHUB" class="link_tr">
       <td class="link_logo_td"><script type="text/javascript" src="https://www.openhub.net/p/633408/widgets/project_basic_stats.js"></script></td>
@@ -218,15 +225,18 @@
 
     </div>
   </div>
+
   <div id="Protein_dynamics" class="main_box">
       <h2>Protein dynamics</h2>
 
-<table cellpadding="5">
-  <tbody>
+<table class="links_table">
+  <thead>
     <tr>
       <td><strong>Site</strong></td>
       <td><strong>Description</strong></td>
     </tr>
+  </thead>
+  <tbody>
     <tr id="Nessy" class="link_tr">
       <td class="link_logo_td"><a href="https://sourceforge.net/projects/nmr-nessy/"><img src="images/NESSY.png" alt="NESSY logo" class="image"/></a></td>
       <td>NESSY is an open source software to analyse NMR relaxation dispersion data of either CPMG or R1p (R1rho) dispersion experiments.</td>
@@ -241,12 +251,14 @@
     <div id="relax_libraries" class="main_h2">
       <h2>relax libraries</h2>
 
-<table cellpadding="5">
-  <tbody>
+<table class="links_table">
+  <thead>
     <tr>
       <td><strong>Site</strong></td>
       <td><strong>Description</strong></td>
     </tr>
+  </thead>
+  <tbody>
     <tr id="minfx" class="link_tr">
       <td class="link_logo_td"><a href="https://sourceforge.net/projects/minfx/"><img src="images/minfx_logo.png" alt="minfx logo" class="image"/></a></td>
       <td>The minfx project is a Python package for numerical optimisation, being a large collection of standard minimisation algorithms.  This is used by relax for the optimisation user functions.</td>
