--- a/communication.html
+++ b/communication.html
@@ -184,13 +184,13 @@
 
       <!-- SiteSearch Google -->
       <form method="get" action="http://www.google.com/search">
-      <table style="background-color:#ffffff">
+      <table class="google_sitesearch_table">
       <tr>
-        <td>
+        <td class="sitesearch_google_logo">
           <a href="http://www.google.com/"><img src="http://www.google.com/logos/Logo_40wht.gif" style="border:0" alt="Google"/></a>
         </td>
         <td style="font-size:80%">
-          <input type="text" name="q" size="50" maxlength="255" value=""/>
+          <input type="text" name="q" size="40" maxlength="255" value=""/>
           <input type="submit" name="btnG" value="Google Search"/>
           <input type="hidden" name="domains" value="/"/>
             <br />
