Mobile: Use absolute paths to the smaller relax logo.

--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="header_image_small">
-  <a href="/" name="relax" type="image/png"><img src="images/relax_logo_32.png" width="80" height="32" class="image"/></a>
+  <a href="/" name="relax" type="image/png"><img src="/images/relax_logo_32.png" width="80" height="32" class="image"/></a>
 </div>
 
 <div class="header">
