Links: Simplified the TOC.

--- a/links.html
+++ b/links.html
@@ -33,45 +33,11 @@
     <h1>Links</h1>
 
     <ul>
-    <li><a href="links.html#relax_infrastructure">relax infrastructure</a>
-     <ul>
-      <li><a href="links.html#SourceForge">SourceForge</a></li>
-      <li><a href="links.html#Gna">Gna!</a></li>
-      <li><a href="links.html#GitHub">GitHub</a></li>
-      <li><a href="links.html#GitLab">GitLab</a></li>
-      <li><a href="links.html#Bitbucket">Bitbucket</a></li>
-     </ul>
-    </li>
-    <li><a href="links.html#Mailing_list_archives">Mailing list archives</a>
-     <ul>
-      <!--<li><a href="links.html#Gmane">Gmane</a></li>-->
-      <li><a href="links.html#Mail_archive">The Mail Archive</a></li>
-      <li><a href="links.html#MARC">MARC</a></li>
-     </ul>
-    </li>
-    <li><a href="links.html#Web_resources">Web resources</a>
-     <ul>
-      <li><a href="links.html#Free_software_directory">Free Software Directory</a></li>
-      <li><a href="links.html#Linuxlinks">Linuxlinks.com</a></li>
-      <li><a href="links.html#Softpedia">Softpedia</a></li>
-      <li><a href="links.html#Prolinux">Pro-Linux.de</a></li>
-      <li><a href="links.html#Open_source_software_directory">Open Source Software Directory</a></li>
-      <li><a href="links.html#archive_today">archive.today</a></li>
-      <li><a href="links.html#OpenHUB">OpenHUB</a></li>
-     </ul>
-    </li>
-    <li><a href="links.html#Protein_dynamics">Protein dynamics</a>
-     <ul>
-      <li><a href="links.html#Nessy">NESSY</a></li>
-      <li><a href="links.html#PDC">Bruker PDC</a></li>
-     </ul>
-    </li>
-    <li><a href="links.html#relax_libraries">relax libraries</a>
-     <ul>
-      <li><a href="links.html#minfx">minfx</a></li>
-      <li><a href="links.html#bmrblib">bmrblib</a></li>
-     </ul>
-    </li>
+    <li><a href="links.html#relax_infrastructure">relax infrastructure</a></li>
+    <li><a href="links.html#Mailing_list_archives">Mailing list archives</a></li>
+    <li><a href="links.html#Web_resources">Web resources</a></li>
+    <li><a href="links.html#Protein_dynamics">Protein dynamics</a></li>
+    <li><a href="links.html#relax_libraries">relax libraries</a></li>
     </ul>
   </div>
 
