--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
          <a class="submenu_def" href="/manual/index.html" title="The relax HTML user manual (lower quality than the PDF)">HTML user manual</a>
       </div>
     <div class="menu_def"><a href="/download.html" title="Instructions for downloading relax">Download</a></div>
-    <div class="menu_def"><a href="/communication.html" title="The bug tracker and mailing lists">Mailing lists &amp; trackers</a></div>
+    <div class="menu_def"><a href="/communication.html" title="The bug tracker and mailing lists">Communication</a></div>
     <div class="menu_def"><a href="/api/" title="The relax internals for power users">The relax API documentation</a></div>
     <div class="menu_def"><a href="/faq.html" title="Frequently asked questions (FAQ)">FAQ</a></div>
     <div class="menu_def_collapsable" onclick="collapseMenu('devel_submenu')">Development platform setup</div>
