Events: The titles of the events now all span 2 columns to avoid wrapping.

--- a/events.html
+++ b/events.html
@@ -94,7 +94,7 @@
           <td>
             <table class="conf-subtable">
               <tbody>
-                <tr><td><strong>ICMRBS 2012</strong></td></tr>
+                <tr><td colspan="2"><strong>ICMRBS 2012</strong></td></tr>
                 <tr><td class="conf-table-title">Conference:</td><td>XXV<sup>th</sup> International Conference on Magnetic Resonance in Biological Systems (ICMRBS).</td></tr>
                 <tr><td class="conf-table-title">Location:</td><td>Lyon, France.</td></tr>
                 <tr><td class="conf-table-title">Title:</td><td>relax and its applications for the study of internal and domain motions in biomolecules.</td></tr>
@@ -115,7 +115,7 @@
           <td>
             <table class="conf-subtable">
               <tbody>
-                <tr><td><strong>MOOT 2009</strong></td></tr>
+                <tr><td colspan="2"><strong>MOOT 2009</strong></td></tr>
                 <tr><td class="conf-table-title">Conference:</td><td>22<sup>nd</sup> MOOT NMR Minisymposium.</td></tr>
                 <tr><td class="conf-table-title">Location:</td><td>Ottawa, ON, Canada.</td></tr>
                 <tr><td class="conf-table-title">Title:</td><td>A toolkit for dynamics relaxing the BMRB.</td></tr>
@@ -135,7 +135,7 @@
           <td>
             <table class="conf-subtable">
               <tbody>
-                <tr><td><strong>ENC 2009</strong></td></tr>
+                <tr><td colspan="2"><strong>ENC 2009</strong></td></tr>
                 <tr><td class="conf-table-title">Conference:</td><td>50<sup>th</sup> Experimental Nuclear Magnetic Resonance Conference (ENC).</td></tr>
                 <tr><td class="conf-table-title">Location:</td><td>Asilomar, CA, USA.</td></tr>
                 <tr><td class="conf-table-title">Title:</td><td>A toolkit for dynamics and how to relax the BMRB.</td></tr>
@@ -157,7 +157,7 @@
           <td>
             <table class="conf-subtable">
               <tbody>
-                <tr><td><strong>ICMRBS 2006</strong></td></tr>
+                <tr><td colspan="2"><strong>ICMRBS 2006</strong></td></tr>
                 <tr><td class="conf-table-title">Conference:</td><td>XXII<sup>nd</sup> International Conference on Magnetic Resonance in Biological Systems (ICMRBS).</td></tr>
                 <tr><td class="conf-table-title">Location:</td><td>Goettingen, Germany.</td></tr>
                 <tr><td class="conf-table-title">Title:</td><td>The program relax:  Improving optimisation and model-free analysis in reverse.</td></tr>
@@ -178,7 +178,7 @@
           <td>
             <table class="conf-subtable">
               <tbody>
-                <tr><td><strong>ANZMAG 2004</strong></td></tr>
+                <tr><td colspan="2"><strong>ANZMAG 2004</strong></td></tr>
                 <tr><td class="conf-table-title">Conference:</td><td>The Australia and New Zealand society for Magnetic Resonance (ANZMAG) Conference.</td></tr>
                 <tr><td class="conf-table-title">Location:</td><td>Barossa Valley, Australia.</td></tr>
                 <tr><td class="conf-table-title">Title:</td><td>Improving the model-free analysis of protein dynamics.</td></tr>
