Links: Simplification of the tables.

--- a/links.html
+++ b/links.html
@@ -55,32 +55,32 @@
 
   <tbody>
 
-    <tr id="SourceForge" class="link_tr">
-      <td class="link_logo_td"><a href="https://sourceforge.net/projects/nmr-relax"><img src="images/sf_logo.png" alt="SourceForege logo" class="image"/></a></td>
+    <tr id="SourceForge">
+      <td><a href="https://sourceforge.net/projects/nmr-relax"><img src="images/sf_logo.png" alt="SourceForege logo" class="image"/></a></td>
       <td>SourceForge is an Open Source community resource dedicated to helping open source projects be as successful as possible.</td>
       <td>This is the primary relax infrastructure site.  The relax project page is <a href="https://sourceforge.net/projects/nmr-relax">https://sourceforge.net/projects/nmr-relax</a>.</td>
     </tr>
 
-    <tr id="Gna" class="link_tr">
-      <td class="link_logo_td"><a href="https://web.archive.org/web/https://gna.org/projects/relax"><img src="images/gnalogo.png" alt="Gna! logo" class="image"/></a></td>
+    <tr id="Gna">
+      <td><a href="https://web.archive.org/web/https://gna.org/projects/relax"><img src="images/gnalogo.png" alt="Gna! logo" class="image"/></a></td>
       <td>Gna! was a central point for the development, distribution and maintenance of Libre Software (Free Software) projects.</td>
       <td>Prior to the Gna! shutdown, this used to the primary relax infrastructure site.  The archived relax project page is <a href="https://web.archive.org/web/20170305175246/https://gna.org/projects/relax">https://gna.org/projects/relax</a>.  The archived relax developer Gna! pages were (in alphabetical order):  <a href="https://web.archive.org/web/20170301012510/https://gna.org/users/bugman">Edward d&#39;Auvergne</a>, <a href="https://web.archive.org/web/20170301012516/https://gna.org/users/michaelbieri">Michael Bieri</a>, <a href="https://web.archive.org/web/20170305173814/http://gna.org/users/tlinnet">Troels Linnet</a>, <a href="https://web.archive.org/web/20170301004013/https://gna.org/users/macraild">Chris MacRaild</a>, <a href="https://web.archive.org/web/20170301012404/https://gna.org/users/semor">S&#233;bastien Morin</a>, <a href="https://web.archive.org/web/20170301010933/https://gna.org/users/pansapiens">Andrew Perry</a>, <a href="https://web.archive.org/web/20170301021354/https://gna.org/users/han87">Han Sun</a>, <a href="https://web.archive.org/web/20170301004459/https://gna.org/users/varioustoxins">Gary Thompson</a>.</td>
     </tr>
 
-    <tr id="GitHub" class="link_tr">
-      <td class="link_logo_td"><a href="https://github.com/nmr-relax"><img src="images/gh_logo.png" alt="GitHub logo" class="image"/></a></td>
+    <tr id="GitHub">
+      <td><a href="https://github.com/nmr-relax"><img src="images/gh_logo.png" alt="GitHub logo" class="image"/></a></td>
       <td>GitHub is how people build software.</td>
       <td>This is a mirror infrastructure site.  The relax project page is <a href="https://github.com/nmr-relax">https://github.com/nmr-relax</a>.</td>
     </tr>
 
-    <tr id="GitLab" class="link_tr">
-      <td class="link_logo_td"><a href="https://gitlab.com/nmr-relax"><img src="images/gl_logo.png" alt="GitLab logo" class="image"/></a></td>
+    <tr id="GitLab">
+      <td><a href="https://gitlab.com/nmr-relax"><img src="images/gl_logo.png" alt="GitLab logo" class="image"/></a></td>
       <td>Open source software to collaborate on code.</td>
       <td>This is a mirror infrastructure site.  The relax project page is <a href="https://gitlab.com/nmr-relax">https://gitlab.com/nmr-relax</a>.</td>
     </tr>
 
-    <tr id="Bitbucket" class="link_tr">
-      <td class="link_logo_td"><a href="https://bitbucket.org/nmr-relax"><img src="images/bb_logo.png" alt="Bitbucket logo" class="image"/></a></td>
+    <tr id="Bitbucket">
+      <td><a href="https://bitbucket.org/nmr-relax"><img src="images/bb_logo.png" alt="Bitbucket logo" class="image"/></a></td>
       <td>Open source software to collaborate on code.</td>
       <td>This is a mirror infrastructure site.  The relax project page is <a href="https://bitbucket.org/nmr-relax">https://bitbucket.org/nmr-relax</a>.</td>
     </tr>
@@ -103,21 +103,21 @@
 
   <tbody>
     <!--
-    <tr id="Gmane" class="link_tr">
-      <td class="link_logo_td"><a href="http://gmane.org/find.php?list=nmr.relax"><img src="images/gmane-50.png" alt="Gmane logo" class="image"/></a></td>
+    <tr id="Gmane">
+      <td><a href="http://gmane.org/find.php?list=nmr.relax"><img src="images/gmane-50.png" alt="Gmane logo" class="image"/></a></td>
       <td>The Gmane mailing list archive.</td>
       <td>The archived relax mailing lists include relax-announce (<a href="http://news.gmane.org/gmane.science.nmr.relax.announce">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.announce">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.announce">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.announce">RSS</a>), relax-users (<a href="http://news.gmane.org/gmane.science.nmr.relax.user">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.user">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.user">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.user">RSS</a>), relax-devel (<a href="http://news.gmane.org/gmane.science.nmr.relax.devel">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.devel">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.devel">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.devel">RSS</a>), and relax-commits (<a href="http://news.gmane.org/gmane.science.nmr.relax.scm">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.scm">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.scm">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.scm">RSS</a>).</td>
     </tr>
     -->
 
-    <tr id="Mail_archive" class="link_tr">
-      <td class="link_logo_td"><a href="http://www.mail-archive.com"><img src="images/mail-archive.png" alt="The mail archive logo" class="image"/></a></td>
+    <tr id="Mail_archive">
+      <td><a href="http://www.mail-archive.com"><img src="images/mail-archive.png" alt="The mail archive logo" class="image"/></a></td>
       <td>An easy-to-use archiving service for electronic mailing lists.</td>
       <td>The archived relax mailing lists include <a href="http://www.mail-archive.com/relax-announce@gna.org/">relax-announce</a>, <a href="http://www.mail-archive.com/relax-users@gna.org/">relax-users</a>, <a href="http://www.mail-archive.com/relax-devel@gna.org/">relax-devel</a>, and <a href="http://www.mail-archive.com/relax-commits@gna.org/">relax-commits</a>.</td>
     </tr>
 
-    <tr id="MARC" class="link_tr">
-      <td class="link_logo_td"><strong><a href="http://marc.info/" style="font-size:x-large">MARC</a></strong></td>
+    <tr id="MARC">
+      <td><strong><a href="http://marc.info/" style="font-size:x-large">MARC</a></strong></td>
       <td>Mailing list ARChives.</td>
       <td>The archived relax mailing lists include <a href="http://marc.info/?l=relax-announce&amp;r=1&amp;w=2">relax-announce</a>, <a href="http://marc.info/?l=relax-users&amp;r=1&amp;w=2">relax-users</a>, <a href="http://marc.info/?l=relax-devel&amp;r=1&amp;w=2">relax-devel</a>, and <a href="http://marc.info/?l=relax-commits&amp;r=1&amp;w=2">relax-commits</a>.</td>
     </tr>
@@ -139,38 +139,38 @@
   </thead>
 
   <tbody>
-    <tr id="Free_software_directory" class="link_tr">
-      <td class="link_logo_td"><a href="http://directory.fsf.org/wiki/relax"><img src="images/heckert_gnu.small.png" alt="The Free Software Directory" class="image"/></a></td>
+    <tr id="Free_software_directory">
+      <td><a href="http://directory.fsf.org/wiki/relax"><img src="images/heckert_gnu.small.png" alt="The Free Software Directory" class="image"/></a></td>
       <td>The Free Software Directory.</td>
       <td>The relax project page is <a href="http://directory.fsf.org/wiki/relax">http://directory.fsf.org/wiki/relax</a>.</td>
     </tr>
 
-    <tr id="Linuxlinks" class="link_tr">
-      <td class="link_logo_td"><a href="http://www.linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/linuxlinks_small.png" alt="LinuxLinks logo" class="image"/></a></td>
+    <tr id="Linuxlinks">
+      <td><a href="http://www.linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/linuxlinks_small.png" alt="LinuxLinks logo" class="image"/></a></td>
       <td>LinuxLinks.com, the Linux portal, is a website listing many Linux software projects.</td>
       <td>On the <a href="http://www.linuxlinks.com/Software/Scientific/Biology/Proteins/">Software:Scientific:Biology:Proteins</a> page.</td>
     </tr>
 
-    <tr id="Softpedia" class="link_tr">
-      <td class="link_logo_td"><a href="http://linux.softpedia.com/get/Science/relax-22351.shtml"><img src="images/softpedia_logo4a.gif" alt="Softpedia logo" class="image"/></a></td>
+    <tr id="Softpedia">
+      <td><a href="http://linux.softpedia.com/get/Science/relax-22351.shtml"><img src="images/softpedia_logo4a.gif" alt="Softpedia logo" class="image"/></a></td>
       <td>Softpedia is the encyclopedia of free software downloads.</td>
       <td>Softpedia has pages for <a href="http://linux.softpedia.com/get/Science/relax-22351.shtml">GNU/Linux</a>, <a href="http://www.softpedia.com/get/Science-CAD/relax-project.shtml">MS Windows</a>, and <a href="http://mac.softpedia.com/get/Math-Scientific/Edward-relax.shtml">Mac OS X</a>.</td>
     </tr>
 
-    <tr id="Prolinux" class="link_tr">
-      <td class="link_logo_td"><a href="http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..10010.100"><img src="images/prolinux_small.png" alt="Pro-Linux.de logo" class="image"/></a></td>
+    <tr id="Prolinux">
+      <td><a href="http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..10010.100"><img src="images/prolinux_small.png" alt="Pro-Linux.de logo" class="image"/></a></td>
       <td>Pro-Linux ist eine der gr&#246;&#223;ten deutschsprachigen Seiten zum Thema Linux.</td>
       <td>The relax page is <a href="http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..10010.100">http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..10010.100</a>.</td>
     </tr>
 
-    <tr id="Open_source_software_directory" class="link_tr">
-      <td class="link_logo_td"><a href="https://opensourcesoftwaredirectory.com/Scientific/Molecule-Editors"><img src="images/open_source_software_directory.png" alt="Open Source Software Directory logo" class="image"/></a></td>
+    <tr id="Open_source_software_directory">
+      <td><a href="https://opensourcesoftwaredirectory.com/Scientific/Molecule-Editors"><img src="images/open_source_software_directory.png" alt="Open Source Software Directory logo" class="image"/></a></td>
       <td>Use the Open Source Software Directory to find the best free and open-source software for home and business.</td>
       <td>In the <a href="https://opensourcesoftwaredirectory.com/Scientific/Molecule-Editors">molecule editors</a> cateogory.</td>
     </tr>
 
-    <tr id="archive_today" class="link_tr">
-      <td class="link_logo_td"><a href="http://archive.today/www.nmr-relax.com">archive.today</a></td>
+    <tr id="archive_today">
+      <td><a href="http://archive.today/www.nmr-relax.com">archive.today</a></td>
       <td>The archive.today personal Wayback Machine.</td>
       <td>The relax pages are archived at <a href="http://archive.today/www.nmr-relax.com">http://archive.today/www.nmr-relax.com</a>.</td>
     </tr>
@@ -179,8 +179,8 @@
 
 <table class="links_table">
   <tbody>
-    <tr id="OpenHUB" class="link_tr">
-      <td class="link_logo_td"><script type="text/javascript" src="https://www.openhub.net/p/633408/widgets/project_basic_stats.js"></script></td>
+    <tr id="OpenHUB">
+      <td><script type="text/javascript" src="https://www.openhub.net/p/633408/widgets/project_basic_stats.js"></script></td>
       <td>OpenHUB, previously known as Ohloh, is a free public directory of Free and Open Source Software and the contributors who create and maintain it.</td>
       <td>The relax project page is <a href="https://www.openhub.net/p/nmr-relax">https://www.openhub.net/p/nmr-relax</a>.  The relax developers pages are:
           <br/>  <a target="_blank" href="https://www.openhub.net/accounts/true_bugman?ref=sample"><img alt='Open Hub profile for Edward d&#39;Auvergne' border='0' height='35' src='https://www.openhub.net/accounts/true_bugman/widgets/account_detailed?format=gif&amp;ref=sample' width='230'>
@@ -203,12 +203,12 @@
     </tr>
   </thead>
   <tbody>
-    <tr id="Nessy" class="link_tr">
-      <td class="link_logo_td"><a href="https://sourceforge.net/projects/nmr-nessy/"><img src="images/NESSY.png" alt="NESSY logo" class="image"/></a></td>
+    <tr id="Nessy">
+      <td><a href="https://sourceforge.net/projects/nmr-nessy/"><img src="images/NESSY.png" alt="NESSY logo" class="image"/></a></td>
       <td>NESSY is an open source software to analyse NMR relaxation dispersion data of either CPMG or R1p (R1rho) dispersion experiments.</td>
     </tr>
-    <tr id="PDC" class="link_tr">
-      <td class="link_logo_td"><a href="http://www.bruker.com/products/mr/nmr/nmr-software/software.html"><img src="images/bruker_logo.png" alt="Bruker logo" class="image"/></a></td>
+    <tr id="PDC">
+      <td><a href="http://www.bruker.com/products/mr/nmr/nmr-software/software.html"><img src="images/bruker_logo.png" alt="Bruker logo" class="image"/></a></td>
       <td>The Bruker Dynamics Center for the processing of R<sub>1</sub>, R<sub>2</sub>, R<sub>1&#961;</sub>, and steady-state NOE data from Bruker NMR spectrometers, as well as other more advanced <a href="/mail.gna.org/public/relax-users/2012-04/msg00011.html">analyses</a>.</td>
     </tr>
   </tbody>
@@ -225,12 +225,12 @@
     </tr>
   </thead>
   <tbody>
-    <tr id="minfx" class="link_tr">
-      <td class="link_logo_td"><a href="https://sourceforge.net/projects/minfx/"><img src="images/minfx_logo.png" alt="minfx logo" class="image"/></a></td>
+    <tr id="minfx">
+      <td><a href="https://sourceforge.net/projects/minfx/"><img src="images/minfx_logo.png" alt="minfx logo" class="image"/></a></td>
       <td>The minfx project is a Python package for numerical optimisation, being a large collection of standard minimisation algorithms.  This is used by relax for the optimisation user functions.</td>
     </tr>
-    <tr id="bmrblib" class="link_tr">
-      <td class="link_logo_td"><a href="https://sourceforge.net/projects/bmrblib/"><img src="images/bmrblib_logo.png" alt="Bmrblib" class="image"/></a></td>
+    <tr id="bmrblib">
+      <td><a href="https://sourceforge.net/projects/bmrblib/"><img src="images/bmrblib_logo.png" alt="Bmrblib" class="image"/></a></td>
       <td>Bmrblib is an API abstracting the <a href="http://www.bmrb.wisc.edu/">BioMagResBank (BMRB)</a> NMR-STAR format. It allows the writing of NMR-STAR files for BMRB data deposition and the reading and easy extraction of data from files residing in the BMRB data bank, all without knowledge of the Self-Defining Text Archive and Retrieval (STAR) format.  This is used by relax to interface with the BMRB.</td>
     </tr>
   </tbody>
