Mobile: High resolution relax logos are now used to improve appearances when zooming.

--- a/header.html
+++ b/header.html
@@ -1,10 +1,10 @@
 <!-- SSI header -->
 <div class="header_image">
-  <a href="/" name="relax" type="image/png"><img src="/relax_logo.png" alt="relax: dynamics analysis, model-free analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, relaxation dispersion, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." width="200" height="84" class="image"/></a>
+  <a href="/" name="relax" type="image/png"><img src="/relax_logo_hires.png" alt="relax: dynamics analysis, model-free analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, relaxation dispersion, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." class="image"/></a>
 </div>
 
 <div class="header_image_small">
-  <a href="/" name="relax" type="image/png"><img src="/images/relax_logo_32.png" width="80" height="32" class="image"/></a>
+  <a href="/" name="relax" type="image/png"><img src="/relax_logo_hires.png" class="image"/></a>
 </div>
 
 <div class="header">
