--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
   <!-- Mobile menu -->
   <div class="menu_mobile_header">
     <!-- relax icon -->
-    <a href="/" type="image/png"><img src="/images/relax_logo_32.png"/></a>
+    <a href="/" type="image/png"><img src="/relax_logo_hires.png"/></a>
 
     <!-- Mobile menu toggle -->
     <a href="javascript:void(0);" class="icon" onclick="toggleMobileMenu()">
