Links: Switched to the high resolution Octocat.png logo for GitHub.

--- a/links.html
+++ b/links.html
@@ -68,7 +68,7 @@
     </tr>
 
     <tr id="GitHub">
-      <td><a href="https://github.com/nmr-relax"><img src="images/GitHub_logo_2013.svg" alt="GitHub logo" class="image"/></a></td>
+      <td><a href="https://github.com/nmr-relax"><img src="images/Octocat.png" alt="GitHub logo" class="image"/></a></td>
       <td>GitHub is how people build software.</td>
       <td>This is a mirror infrastructure site.  The relax project page is <a href="https://github.com/nmr-relax">https://github.com/nmr-relax</a>.</td>
     </tr>
