--- a/refs.html
+++ b/refs.html
@@ -34,101 +34,138 @@
 
   <div class="main_h2" id="relax">
    <h2>The program relax</h2>
-    <ul class="ref_ul">
-     <li class="ref_li" id="dAuvergneGooley08a">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models I.  Minimisation algorithms and their performance within the model-free and Brownian rotational diffusion spaces. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 107-119. (<a href="http://dx.doi.org/10.1007/s10858-007-9214-2">abstract</a>)</li>
 
-     <li class="ref_li" id="dAuvergneGooley08b">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models II.  A new methodology for the dual optimisation of the model-free parameters and the Brownian rotational diffusion tensor. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 121-133. (<a href="http://dx.doi.org/10.1007/s10858-007-9213-3">abstract</a>)</li>
+    <p>The main references for the software relax are:</p>
+
+    <ul class="ref_ul">
+     <li id="dAuvergneGooley08a">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models I.  Minimisation algorithms and their performance within the model-free and Brownian rotational diffusion spaces. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 107-119. (<a href="http://dx.doi.org/10.1007/s10858-007-9214-2">DOI: 10.1007/s10858-007-9214-2</a>)</li>
+
+     <li id="dAuvergneGooley08b">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models II.  A new methodology for the dual optimisation of the model-free parameters and the Brownian rotational diffusion tensor. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 121-133. (<a href="http://dx.doi.org/10.1007/s10858-007-9213-3">DOI: 10.1007/s10858-007-9213-3</a>)</li>
     </ul>
 
     <h3>relax GUI</h3>
+
+    <p>The reference for the graphical user interface (GUI) in relax is:</p>
+
     <ul class="ref_ul">
-     <li class="ref_li" id="Bieri11">Bieri M., d'Auvergne E. J., Gooley P. R. (2011).  relaxGUI: a new software for fast and simple NMR relaxation data analysis and calculation of ps-ns and &#956;s motion of proteins. <em>J. Biomol. NMR</em>, <strong>50</strong>(2), 147-155. (<a href="http://dx.doi.org/10.1007/s10858-011-9509-1">abstract</a>)</li>
+     <li id="Bieri11">Bieri M., d'Auvergne E. J., Gooley P. R. (2011).  relaxGUI: a new software for fast and simple NMR relaxation data analysis and calculation of ps-ns and &#956;s motion of proteins. <em>J. Biomol. NMR</em>, <strong>50</strong>(2), 147-155. (<a href="http://dx.doi.org/10.1007/s10858-011-9509-1">DOI: 10.1007/s10858-011-9509-1</a>)</li>
     </ul>
   </div>
 
 
   <div class="main_h2" id="model_free">
-   <h2>Model-free analysis in relax</h2>
+   <h2>Model-free analysis</h2>
 
-   <p>For a model-free analysis using relax, all of the following should be cited!</p>
+   <p>For a model-free analysis using relax, the following references should be cited.</p>
 
-   <h3>Original Lipari-Szabo theory</h3>
+   <h3>Original Lipari & Szabo theory</h3>
+
+    <p>The model-free theory papers are:</p>
+
     <ul class="ref_ul">
-     <li class="ref_li" id="LipariSzabo82a">Lipari, G. and Szabo, A. (1982a).  Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules I. Theory and range of validity. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4546-4559.  (<a href="http://dx.doi.org/10.1021/ja00381a009">abstract</a>)</li>
+     <li id="LipariSzabo82a">Lipari, G. and Szabo, A. (1982a).  Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules I. Theory and range of validity. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4546-4559.  (<a href="http://dx.doi.org/10.1021/ja00381a009">DOI: 10.1021/ja00381a009</a>)</li>
 
-     <li class="ref_li" id="LipariSzabo82b">Lipari, G. and Szabo, A. (1982b).  Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules II. Analysis of experimental results. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4559-4570.  (<a href="http://dx.doi.org/10.1021/ja00381a010">abstract</a>)</li>
+     <li id="LipariSzabo82b">Lipari, G. and Szabo, A. (1982b).  Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules II. Analysis of experimental results. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4559-4570.  (<a href="http://dx.doi.org/10.1021/ja00381a010">DOI: 10.1021/ja00381a010</a>)</li>
     </ul>
 
    <h3>Extended model-free theory</h3>
+
+    <p>The paper extending the model-free theory to motions on two timescales is:</p>
+
     <ul class="ref_ul">
-     <li class="ref_li" id="Clore90">Clore, G. M., Szabo, A., Bax, A., Kay, L. E., Driscoll, P. C., and Gronenborn, A. M. (1990b).  Deviations from the simple 2-parameter model-free approach to the interpretation of N-15 nuclear magnetic-relaxation of proteins. <em>J. Am. Chem. Soc.</em>, <strong>112</strong>(12), 4989-4991.  (<a href="http://dx.doi.org/10.1021/ja00168a070">abstract</a>)</li>
+     <li id="Clore90">Clore, G. M., Szabo, A., Bax, A., Kay, L. E., Driscoll, P. C., and Gronenborn, A. M. (1990b).  Deviations from the simple 2-parameter model-free approach to the interpretation of N-15 nuclear magnetic-relaxation of proteins. <em>J. Am. Chem. Soc.</em>, <strong>112</strong>(12), 4989-4991.  (<a href="http://dx.doi.org/10.1021/ja00168a070">DOI: 10.1021/ja00168a070</a>)</li>
     </ul>
 
    <h3>Model-free model selection</h3>
+
+    <p>The reference for the improvements to model-free model selection by switching from hypothesis testing (ANOVA statistics) to using Akaike's Information Criterion (AIC) is:</p>
+
     <ul class="ref_ul">
-     <li class="ref_li" id="dAuvergneGooley03">d'Auvergne, E. J. and Gooley, P. R. (2003).  The use of model selection in the model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</strong>(1), 25-39. (<a href="http://dx.doi.org/10.1023/A:1021902006114">abstract</a>)</li>
+     <li id="dAuvergneGooley03">d'Auvergne, E. J. and Gooley, P. R. (2003).  The use of model selection in the model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</strong>(1), 25-39. (<a href="http://dx.doi.org/10.1023/A:1021902006114">DOI: 10.1023/A:1021902006114</a>)</li>
     </ul>
 
    <h3>Model-free model elimination</h3>
+
+    <p>For the removal of failed models in a model-free analysis, the reference is:</p>
+
     <ul class="ref_ul">
-     <li class="ref_li" id="dAuvergneGooley06">d'Auvergne, E. J. and Gooley, P. R. (2006).  Model-free model elimination:  A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117-135. (<a href="http://dx.doi.org/10.1007/s10858-006-9007-z">abstract</a>)</li>
+     <li id="dAuvergneGooley06">d'Auvergne, E. J. and Gooley, P. R. (2006).  Model-free model elimination:  A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117-135. (<a href="http://dx.doi.org/10.1007/s10858-006-9007-z">DOI: 10.1007/s10858-006-9007-z</a>)</li>
     </ul>
 
    <h3>Model-free minimisation</h3>
+
+    <p>The following reference is for the significant optimisation improvements to model-free analyses:</p>
+
     <ul class="ref_ul">
-     <li class="ref_li">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models I.  Minimisation algorithms and their performance within the model-free and Brownian rotational diffusion spaces. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 107-119. (<a href="http://dx.doi.org/10.1007/s10858-007-9214-2">abstract</a>)</li>
+     <li>d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models I.  Minimisation algorithms and their performance within the model-free and Brownian rotational diffusion spaces. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 107-119. (<a href="http://dx.doi.org/10.1007/s10858-007-9214-2">DOI: 10.1007/s10858-007-9214-2</a>)</li>
     </ul>
 
-   <h3>The new model-free analysis protocol</h3>
-    <ul class="ref_ul">
-     <li class="ref_li" id="dAuvergneGooley07">d'Auvergne E. J., Gooley P. R. (2007).  Set theory formulation of the model-free problem and the diffusion seeded model-free paradigm. <em>Mol. Biosyst.</em>, <strong>3</strong>(7), 483-494.  (<a href="http://dx.doi.org/10.1039/b702202f">abstract</a>)</li>
+   <h3>Automated model-free protocol</h3>
 
-     <li class="ref_li">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models II.  A new methodology for the dual optimisation of the model-free parameters and the Brownian rotational diffusion tensor. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 121-133. (<a href="http://dx.doi.org/10.1007/s10858-007-9213-3">abstract</a>)</li>
+    <p>The automated analysis protocol in relax, in which the model-free chicken-and-egg problem is reversed and the internal motions found before the diffusing tensor, is covered by the references:</p>
+
+    <ul class="ref_ul">
+     <li id="dAuvergneGooley07">d'Auvergne E. J., Gooley P. R. (2007).  Set theory formulation of the model-free problem and the diffusion seeded model-free paradigm. <em>Mol. Biosyst.</em>, <strong>3</strong>(7), 483-494.  (<a href="http://dx.doi.org/10.1039/b702202f">DOI: 10.1039/b702202f</a>)</li>
+
+     <li>d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models II.  A new methodology for the dual optimisation of the model-free parameters and the Brownian rotational diffusion tensor. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 121-133. (<a href="http://dx.doi.org/10.1007/s10858-007-9213-3">DOI: 10.1007/s10858-007-9213-3</a>)</li>
     </ul>
 
-   <h3>Comprehensive reference</h3>
+   <h3>Early relax reference</h3>
     <p>This PhD thesis expands on all of the d'Auvergne and Gooley references and describes model-free analysis and the program relax in more detail.</p>
     <ul class="ref_ul">
-     <li class="ref_li" id="dAuvergne06">d'Auvergne, E. J. (2006).   Protein dynamics: a study of the model-free analysis of NMR relaxation data. Ph.D. thesis, Biochemistry and Molecular Biology, University of Melbourne.  (<a href="https://minerva-access.unimelb.edu.au/handle/11343/39174">abstract</a>, <a href="https://minerva-access.unimelb.edu.au/bitstream/handle/11343/39174/67077_00002799_01_thesis.pdf?sequence=1">PDF</a>)</li>
+     <li id="dAuvergne06">d'Auvergne, E. J. (2006).   Protein dynamics: a study of the model-free analysis of NMR relaxation data. Ph.D. thesis, Biochemistry and Molecular Biology, University of Melbourne.  (<a href="https://minerva-access.unimelb.edu.au/handle/11343/39174">abstract</a>, <a href="https://minerva-access.unimelb.edu.au/bitstream/handle/11343/39174/67077_00002799_01_thesis.pdf?sequence=1">PDF</a>)</li>
     </ul>
     <p>It is also available in <a href="http://www.amazon.com/Protein-Dynamics-Model-free-Analysis-Relaxation/dp/3639057627">published book form</a>.</p>
   </div>
 
   <div class="main_h2" id="consistency_testing">
-   <h2>Consistency testing in relax</h2>
+   <h2>Consistency testing</h2>
+    <p>The primary reference for the consistency testing of relaxation data in relax is:</p>
+
     <ul class="ref_ul">
-     <li class="ref_li" id="Morin09">Morin, S. and Gagn&eacute;, S. M. (2009). Simple tests for the validation of multiple field spin relaxation data. <em>J. Biomol. NMR</em>, <strong>45</strong>(4), 361-372.  (<a href="http://dx.doi.org/10.1007/s10858-009-9381-4">abstract</a>)</li>
-     <li class="ref_li" id="Fushman99">Fushman, D., Tjandra, N., and Cowburn, D. (1999). An approach to direct determination of protein dynamics from 15N NMR relaxation at multiple fields, independent of variable 15N chemical shift anisotropy and chemical exchange contributions. <em>J. Am. Chem. Soc.</em>, <strong>121</strong>(37), 8577-8582. (<a href="http://dx.doi.org/10.1021/ja9904991">abstract</a>)</li>
+     <li id="Morin09">Morin, S. and Gagn&eacute;, S. M. (2009). Simple tests for the validation of multiple field spin relaxation data. <em>J. Biomol. NMR</em>, <strong>45</strong>(4), 361-372.  (<a href="http://dx.doi.org/10.1007/s10858-009-9381-4">DOI: 10.1007/s10858-009-9381-4</a>)</li>
+    </ul>
+
+    <p>The analysis implements the methods from:</p>
+
+    <ul class="ref_ul">
+     <li id="Fushman99">Fushman, D., Tjandra, N., and Cowburn, D. (1999). An approach to direct determination of protein dynamics from 15N NMR relaxation at multiple fields, independent of variable 15N chemical shift anisotropy and chemical exchange contributions. <em>J. Am. Chem. Soc.</em>, <strong>121</strong>(37), 8577-8582. (<a href="http://dx.doi.org/10.1021/ja9904991">DOI: 10.1021/ja9904991</a>)</li>
     </ul>
   </div>
 
   <div class="main_h2" id="n_state">
-   <h2>The N-state model analyses</h2>
+   <h2>Ensemble or N-state model</h2>
+
+    <p>For the ensemble analysis, also known as the N-state model, in relax the following references are important:</p>
+
     <ul class="ref_ul">
-     <li class="ref_li" id="Sun11">Sun, H., d'Auvergne, E. J., Reinscheid, U. M., Dias, L. C., Andrade, C. K. Z., Rocha, R. O., and Griesinger, C. (2011). Bijvoet in solution reveals unexpected stereoselectivity in a michael addition. <em>Chemistry-A European Journal</em>, <strong>17</strong>(6), 1811-1817.  (<a href="http://dx.doi.org/10.1002/chem.201002520">abstract</a>)</li>
-     <li class="ref_li" id="Erdelyi11">Erdelyi, M., d'Auvergne, E., Navarro-Vazquez, A., Leonov, A., and Griesinger, C. (2011). Dynamics of the Glycosidic Bond: Conformational Space of Lactose. <em>Chemistry-A European Journal</em>, <strong>17</strong>(34), 9368-9376.  (<a href="http://dx.doi.org/10.1002/chem.201100854">abstract</a>)</li>
+     <li id="Sun11">Sun, H., d'Auvergne, E. J., Reinscheid, U. M., Dias, L. C., Andrade, C. K. Z., Rocha, R. O., and Griesinger, C. (2011). Bijvoet in solution reveals unexpected stereoselectivity in a michael addition. <em>Chemistry-A European Journal</em>, <strong>17</strong>(6), 1811-1817.  (<a href="http://dx.doi.org/10.1002/chem.201002520">DOI: 10.1002/chem.201002520</a>)</li>
+     <li id="Erdelyi11">Erdelyi, M., d'Auvergne, E., Navarro-Vazquez, A., Leonov, A., and Griesinger, C. (2011). Dynamics of the Glycosidic Bond: Conformational Space of Lactose. <em>Chemistry-A European Journal</em>, <strong>17</strong>(34), 9368-9376.  (<a href="http://dx.doi.org/10.1002/chem.201100854">DOI: 10.1002/chem.201100854</a>)</li>
     </ul>
   </div>
 
   <div class="main_h2" id="relax_disp">
-   <h2>The relaxation dispersion analyses</h2>
+   <h2>Relaxation dispersion</h2>
+
+    <p>The primary reference for the relaxation dispersion analysis implemented in relax is:</p>
+
     <ul class="ref_ul">
-     <li class="ref_li" id="Morin14">Morin, S., Linnet, T. E., Lescanne, M., Schanda, P., Thompson, G. S., Tollinger, M., Teilum, K., Gagn&eacute;, S., Marion, D., Griesinger, C., Blackledge, M., and d'Auvergne, E. J. (2014). relax: the analysis of biomolecular kinetics and thermodynamics using NMR relaxation dispersion data. <em>Bioinformatics</em>.  (<a href="http://dx.doi.org/10.1093/bioinformatics/btu166">abstract</a>)</li>
+     <li id="Morin14">Morin, S., Linnet, T. E., Lescanne, M., Schanda, P., Thompson, G. S., Tollinger, M., Teilum, K., Gagn&eacute;, S., Marion, D., Griesinger, C., Blackledge, M., and d'Auvergne, E. J. (2014). relax: the analysis of biomolecular kinetics and thermodynamics using NMR relaxation dispersion data. <em>Bioinformatics</em>.  (<a href="http://dx.doi.org/10.1093/bioinformatics/btu166">DOI: 10.1093/bioinformatics/btu166</a>)</li>
     </ul>
   </div>
 
   <div class="main_h2" id="misc">
    <h2>Misc.</h2>
     <ul class="ref_ul">
-     <li class="ref_li" id="Chen04"> Chen, J., Brooks, 3rd, C. L., and Wright, P. E. (2004).  Model-free analysis of protein dynamics: assessment of accuracy and model selection protocols based on molecular dynamics simulation. <em>J. Biomol. NMR</em>, <strong>29</strong>(3), 243-257.  (<a href="http://dx.doi.org/10.1023/b:jnmr.0000032504.70912.58">abstract</a>)</li>
+     <li id="Chen04"> Chen, J., Brooks, 3rd, C. L., and Wright, P. E. (2004).  Model-free analysis of protein dynamics: assessment of accuracy and model selection protocols based on molecular dynamics simulation. <em>J. Biomol. NMR</em>, <strong>29</strong>(3), 243-257.  (<a href="http://dx.doi.org/10.1023/b:jnmr.0000032504.70912.58">DOI: 10.1023/b:jnmr.0000032504.70912.58</a>)</li>
 
-     <li class="ref_li" id="Farrow95">Farrow, N. A., Zhang, O., Forman-Kay, J. D., Kay, L. E. (1995).  Comparison of the backbone dynamics of a folded and an unfolded SH3 domain existing in equilibrium in aqueous buffer. <em>Biochem.</em>, <strong>34</strong>(3), 868-878.  (<a href="http://dx.doi.org/10.1021/bi00003a021">abstract</a>)</li>
+     <li id="Farrow95">Farrow, N. A., Zhang, O., Forman-Kay, J. D., Kay, L. E. (1995).  Comparison of the backbone dynamics of a folded and an unfolded SH3 domain existing in equilibrium in aqueous buffer. <em>Biochem.</em>, <strong>34</strong>(3), 868-878.  (<a href="http://dx.doi.org/10.1021/bi00003a021">DOI: 10.1021/bi00003a021</a>)</li>
 
-     <li class="ref_li" id="Horne07">Horne J., d'Auvergne E. J., Coles M., Velkov T., Chin Y., Charman W. N., Prankerd R., Gooley P. R., Scanlon M. J. (2007).  Probing the flexibility of the DsbA oxidoreductase from <em>Vibrio cholerae</em> - a <sup>15</sup>N-<sup>1</sup>H heteronuclear NMR relaxation analysis of oxidized and reduced forms of DsbA. <em>J. Mol. Biol.</em>, <strong>371</strong>(3), 703-716.  (<a href="http://dx.doi.org/10.1016/j.jmb.2007.05.067">abstract</a>)</li>
+     <li id="Horne07">Horne J., d'Auvergne E. J., Coles M., Velkov T., Chin Y., Charman W. N., Prankerd R., Gooley P. R., Scanlon M. J. (2007).  Probing the flexibility of the DsbA oxidoreductase from <em>Vibrio cholerae</em> - a <sup>15</sup>N-<sup>1</sup>H heteronuclear NMR relaxation analysis of oxidized and reduced forms of DsbA. <em>J. Mol. Biol.</em>, <strong>371</strong>(3), 703-716.  (<a href="http://dx.doi.org/10.1016/j.jmb.2007.05.067">DOI: 10.1016/j.jmb.2007.05.067</a>)</li>
 
-     <li class="ref_li" id="Lefevre96">Lefevre, J. F., Dayie, K. T., Peng, J. W., and Wagner, G. (1996).  Internal mobility in the partially folded DNA binding and dimerization domains of GAL4:  NMR analysis of the N-H spectral density functions. <em>Biochem.</em>, <strong>35</strong>(8), 2674-2686.  (<a href="http://dx.doi.org/10.1021/bi9526802">abstract</a>)</li>
+     <li id="Lefevre96">Lefevre, J. F., Dayie, K. T., Peng, J. W., and Wagner, G. (1996).  Internal mobility in the partially folded DNA binding and dimerization domains of GAL4:  NMR analysis of the N-H spectral density functions. <em>Biochem.</em>, <strong>35</strong>(8), 2674-2686.  (<a href="http://dx.doi.org/10.1021/bi9526802">DOI: 10.1021/bi9526802</a>)</li>
 
-     <li class="ref_li" id="Mandel95">Mandel, A. M., Akke, M., and Palmer, 3rd, A. G. (1995).  Backbone dynamics of <em>Escherichia coli</em> ribonuclease HI: correlations with structure and function in an active enzyme. <em>J. Mol. Biol.</em>, <strong>246</strong>(1), 144-163.  (<a href="http://dx.doi.org/10.1006/jmbi.1994.0073">abstract</a>)</li>
+     <li id="Mandel95">Mandel, A. M., Akke, M., and Palmer, 3rd, A. G. (1995).  Backbone dynamics of <em>Escherichia coli</em> ribonuclease HI: correlations with structure and function in an active enzyme. <em>J. Mol. Biol.</em>, <strong>246</strong>(1), 144-163.  (<a href="http://dx.doi.org/10.1006/jmbi.1994.0073">DOI: 10.1006/jmbi.1994.0073</a>)</li>
     </ul>
   </div>
 
