References: Added the missing citation details to the relaxation dispersion paper.

--- a/refs.html
+++ b/refs.html
@@ -150,7 +150,7 @@
     <p>The primary reference for the relaxation dispersion analysis implemented in relax is:</p>
 
     <ul class="ref_ul">
-     <li id="Morin14">Morin, S., Linnet, T. E., Lescanne, M., Schanda, P., Thompson, G. S., Tollinger, M., Teilum, K., Gagn&eacute;, S., Marion, D., Griesinger, C., Blackledge, M., and d'Auvergne, E. J. (2014). relax: the analysis of biomolecular kinetics and thermodynamics using NMR relaxation dispersion data. <em>Bioinformatics</em>.  (<a href="http://dx.doi.org/10.1093/bioinformatics/btu166">DOI: 10.1093/bioinformatics/btu166</a>)</li>
+        <li id="Morin14">Morin, S., Linnet, T. E., Lescanne, M., Schanda, P., Thompson, G. S., Tollinger, M., Teilum, K., Gagn&eacute;, S., Marion, D., Griesinger, C., Blackledge, M., and d'Auvergne, E. J. (2014). relax: the analysis of biomolecular kinetics and thermodynamics using NMR relaxation dispersion data. <em>Bioinformatics</em>, <strong>30</strong>(15), 2219-2220.  (<a href="http://dx.doi.org/10.1093/bioinformatics/btu166">DOI: 10.1093/bioinformatics/btu166</a>)</li>
     </ul>
   </div>
 
