--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,40 @@
 <!-- SSI footer -->
 <div class="clear"></div>
 
+<!-- Enable collapsible sections for mobile view -->
+<script>
+    var coll = document.getElementsByClassName("collapsible_section");
+    var i;
+
+    function collapse_header() {
+        // Allow non-mobile view to be disabled.
+        const mobile = window.matchMedia('(min-width: 600px)');
+
+        // Get the element.
+        this.classList.toggle("collapsible_section_open");
+        var section_content = this.nextElementSibling;
+
+        // Toggle in mobile view.
+        if (!mobile.matches) {
+            if (section_content.style.display === "block") {
+                section_content.style.display = "none";
+            } else {
+                section_content.style.display = "block";
+            }
+
+        // Allow the header to be opened if closed in mobile view but the window resizes to non-mobile view.
+        } else {
+            section_content.style.display = "block";
+        }
+    }
+
+    // Event listeners.
+    for (i = 0; i < coll.length; i++) {
+      coll[i].addEventListener("click", collapse_header);
+    }
+
+</script>
+
 <div class="footer">
  <div class="footer_left">This text is available under the terms of the <a href="/fdl.html">GNU Free Documentation License</a>, Version 1.3 or any later version published by the Free Software Foundation.</div>
  <div class="clear"></div>
